--- a/part5/ch02_unit_test/build.gradle
+++ b/part5/ch02_unit_test/build.gradle
@@ -41,6 +41,10 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+	testCompileOnly 'org.projectlombok:lombok'
+	implementation('org.slf4j:slf4j-api:1.7.32')
+	implementation('ch.qos.logback:logback-classic:1.2.9')
 }
 
 tasks.named('test') {
