--- a/part5/ch02_unit_test/build.gradle
+++ b/part5/ch02_unit_test/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 	testImplementation("org.testcontainers:testcontainers:1.19.1")
 	testImplementation("org.testcontainers:testcontainers:1.19.1")
 
+	// reactor test
+	testImplementation("io.projectreactor:reactor-test:3.5.11")
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
